envoy.yaml
admin:
 access_log_path: envoy.log
 address:
   socket_address:
     address: 0.0.0.0
     port_value: 2048

static_resources:
  clusters:
  - name: server
    connect_timeout: 1s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN

    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 8001

  listeners:
  - name: server
    address:
      socket_address:
        address: 0.0.0.0 
        port_value: 8000
        protocol: TCP

    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: envoy
          route_config:
            name: server
            virtual_hosts:
            - name: server
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: server }
          http_filters:
          - name: envoy.router
